# AgentForge

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  COST_ANALYSIS.md  DEMO_SCRIPT.md  EVAL_DATASET.md  HIPAA_COMPLIANCE.md  Makefile  PATIENT_DASHBOARD_MIGRATION.md  README.md  SOCIAL_POST.md  USERS.md  W2_ARCHITECTURE.md  W2_COST_REPORT.md  WEEK2_DASHBOARD_CHECKLIST.md  docker-compose.openemr.yml  pyproject.toml  railway.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  smoke-prod.yml
agent/: audit.py  auth.py  budget.py  cli.py  config.py  dashboard_fhir.py  dashboard_fhir_data.json  db.py  demo_data.py  documents.py  email.py  graph.py  main.py  observability.py  orchestrator.py  prompts.py  rbac.py  rules.py  tools.py  verifier.py
agent/agents/: __init__.py  evidence_retriever_worker.py  intake_extractor_worker.py  outer_graph.py  supervisor.py
agent/extractors/: __init__.py  _vision.py  extraction.py  intake_extractor.py  lab_extractor.py  pdf_fragments.py
agent/rag/: __init__.py  bm25.py  corpus.py  dense.py  rerank.py  retriever.py
agent/schemas/: __init__.py  citation.py  document.py  intake.py  lab.py
agent/static/: index.html
agent/static_dashboard/: index.html
corpus/guidelines/: a1c-glucose-correlation.md  acc-aha-2017-bp-thresholds.md  acei-arb-hyperkalemia.md  ada-2024-a1c-targets.md  (+16 more)
dashboard/: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
eval/: README.md  conftest.py  test_adversarial.py  test_auth_login.py  test_auth_mfa.py  test_auth_password_reset.py  test_bootstrap_extra_users.py  test_budget.py  test_bypass_mfa.py  test_chat_history.py  test_chat_protected.py  test_db_migration_w2.py  test_documents_endpoints.py  test_documents_storage.py  test_documents_upload_endpoint.py  test_extraction_lifecycle.py  test_extractors.py  test_fallback_panel.py  test_golden_cases.py  test_new_tools.py  test_outer_graph.py  test_pdf_fragments.py  test_published_grader_credentials.py  test_rag.py  test_rbac.py  test_rules.py  test_schemas_w2.py  test_supervisor.py  test_synthetic_tampering.py  test_tools.py  test_verifier.py  test_verifier_drug_names.py  test_workers.py
scripts/: generate_sample_intake_forms.py  generate_sample_lab_pdfs.py
terraform/: README.md  compute.tf  database.tf  network.tf  observability.tf  outputs.tf  secrets.tf  security.tf  terraform.tfvars.example  variables.tf  versions.tf
ui/: index.html  package-lock.json  package.json  vite.config.ts
(+132 files in other folders)
