[project]
name = "agentforge-clinical-copilot"
version = "0.1.0"
description = "Clinical Co-Pilot agent service — AgentForge Week 1"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.65.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "bcrypt>=4.2.0",
    "itsdangerous>=2.2.0",
    "pyotp>=2.9.0",
    "langfuse>=4.0.0",
    "langgraph>=1.0.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["eval"]
markers = [
    "live: tests that hit the real Anthropic API (slow, costs money). Run with `pytest -m live`.",
]
addopts = "-m 'not live'"
